--- a/docs/05_cta/css/cta_specs_ver2.css
+++ b/docs/05_cta/css/cta_specs_ver2.css
@@ -1,21 +1,172 @@
-
 :root {
-    --padding-top-bottom: 0.6em;
-    --padding-left-right: 0.9em;
-    --padding-em: var(--padding-top-bottom) var(--padding-left-right);
-    --padding-em-ter: var(--padding-top-bottom) var(--icon-size) var(--padding-top-bottom) 0px;
-    --padding-em-ter: 0px var(--icon-size) 0px 0px;
+    --li-padding: 16px;
+    --viewport-icon-bg: #ffffff;
+}
+
+@media screen and (min-width: 640px) {
+    :root {
+        --li-padding: 24px;
+
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    :root {}
+}
+
+@media screen and (min-width: 1350px) {
+    :root {
+        --li-padding: 32px;
+    }
+}
+
+@media screen and (min-width: 2000px) {
+    :root {
+        /*        --li-padding: 48px;*/
+    }
+}
+
+/*==================== general styling ================*/
+body {
+    background-color: var(--nv-14-dd);
+}
+
+h1 {
+    margin-bottom: 0;
+}
+
+.class {
+    font-family: 'nomo', monospace;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+section > ul > li {
+    padding: var(--li-padding);
+    background: var(--nv-15-5-f7);
+}
+
+@media screen and (max-width: 1023px) {
+
+    .class {
+        background-color: transparent;
+        margin-top: 64px;
+    }
+
+    .no-margin {
+        margin: 0;
+    }
     
-    --icon-size: 1.5em;
-    --icon-position: calc(1em / 1.5 * 0.9);
-    --icon-padding: 0.9em;
+    .cta > ul > li:first-child,
+    .viewport {
+        display: none;
+    }
+
+    .cta > ul > li:nth-child(5n + 8),
+    .cta > ul > li:nth-child(5n + 9),
+    .cta > ul > li:nth-child(5n + 10) {
+        border-top: 1px solid var(--nv-12-5-cc);
+    }
+
+    .cta > ul > li:nth-child(5n + 7)::before,
+    .cta > ul > li:nth-child(5n + 8)::before,
+    .cta > ul > li:nth-child(5n + 9)::before,
+    .cta > ul > li:nth-child(5n + 10)::before {
+        content: 'Desktop 1350+px';
+        display: block;
+        margin-bottom: 8px;
+        font-family: 'nomo', monospace;
+        font-weight: 700;
+        font-size: 14px;
+        color: var(--nv-1-5-1a);
+        line-height: 1.2;
+    }
+
+    .cta > ul > li:nth-child(5n + 8)::before {
+        content: "Laptop 1024-1349px";
+    }
+
+    .cta > ul > li:nth-child(5n + 9)::before {
+        content: "Mobile 300-1023px";
+    }
+    .cta > ul > li:nth-child(5n + 10)::before {
+        content: "Email all viewports";
+    }
 }
 
 
+@media screen and (min-width: 1024px) {
 
-/*============== general ==============*/
+    .viewport {
+        font-family: 'nomo', monospace;
+        font-size: 14px;
+        font-weight: 700;
+    }
+
+    .viewport::before {
+        content: 'desktop_mac';
+        display: inline-block;
+        height: 48px;
+        width: 48px;
+        margin-right: 24px;
+        border-radius: 999px;
+        font-family: 'material icons';
+        font-size: 24px;
+        line-height: 48px;
+        text-align: center;
+        vertical-align: middle;
+        background-color: var(--viewport-icon-bg);
+    }
+
+    .viewport:nth-of-type(3)::before {
+        content: 'laptop_mac';
+    }
+
+    .viewport:nth-of-type(4)::before {
+        content: 'phone_android';
+    }
+    
+    .viewport:nth-of-type(5)::before {
+        content: 'mail';
+    }
+
+    .class {
+        writing-mode: vertical-lr;
+    }
+    
+    .cta > ul > li:first-child {
+        visibility: collapse;
+    }
+
+    .cta > ul {
+        display: grid;
+        grid-template-columns: auto 1fr 1fr 1fr 1fr;
+        grid-gap: 1px;
+    }
+
+
+}
+
+@media screen and (min-width: 1350px) {}
+
+
+/*===================== cta specs=======================*/
+
+.specs {
+    font-family: 'nomo', monospace;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #FF00FF;
+    margin-bottom: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 599px;
+    gap: 0 20px;
+}
+
 .specs li {
-    flex: 1 0 40%;
+    flex: 1 0 45%;
 }
 
 .specs li::before {
@@ -36,24 +187,14 @@
     content: 'Icon:';
 }
 
-.specs li:nth-child(4) {
-    display: revert;
-}
-
 .cta > ul > li:nth-last-of-type(-n + 9) :is(.horizontal, .vertical) {
     display: none;
 }
 
-@media screen and (min-width: 640px) and (max-width: 1023px),
-screen and (min-width: 2040px) {
-    .cta > ul > li:nth-last-of-type(-n + 9) .specs li:first-of-type::after {
-    content: "/";
-}
-}
 
 
 @media screen and (min-width: 420px) and (max-width: 639px),
-screen and (min-width: 1600px) and (max-width: 2039px) {
+screen and (min-width: 1600px) and (max-width: 2239px) {
     .specs {
         gap: 24px;
     }
@@ -69,7 +210,7 @@ screen and (min-width: 1600px) and (max-width: 2039px) {
 }
 
 @media screen and (min-width: 640px) and (max-width: 1023px),
-screen and (min-width: 2040px) {
+screen and (min-width: 2240px) {
 
     .specs {
         max-width: unset;
@@ -85,171 +226,45 @@ screen and (min-width: 2040px) {
         color: var(--nv-9-5-99);
         margin: 0 16px;
     }
+    .cta > ul > li:nth-last-of-type(-n + 9) .specs li:nth-child(n + 2)::after {
+    content: none;
+    }
+/*
+        .cta > ul > li:nth-last-of-type(-n + 9) .specs li:first-of-type::after {
+    content: "/";
+    }
+*/
 }
+/*======================== CTA ======================*/
 
-
-/*===================== cta specs ===================*/
-.cp_cta_primary, .cp_cta_secondary {
-    padding: var(--padding-em);
+.cp_cta_primary, .cp_cta_secondary, .cp_cta_tertiary  {
     font-size: 16px;
 }
-:is(.cp_cta_primary, .cp_cta_secondary).laptop {
-    padding: var(--padding-em);
+:is(.cp_cta_primary, .cp_cta_secondary, .cp_cta_tertiary).laptop {
     font-size: 14px;
 }
-:is(.cp_cta_primary, .cp_cta_secondary).mobile {
-    padding: var(--padding-em);
+:is(.cp_cta_primary, .cp_cta_secondary, .cp_cta_tertiary).mobile {
     font-size: 12px;
 }
-:is(.cp_cta_primary, .cp_cta_secondary).email {
-    padding: var(--padding-em);
+:is(.cp_cta_primary, .cp_cta_secondary, .cp_cta_tertiary).email {
     font-size: 12px;
 }
 
-.cp_cta_primary.large, .cp_cta_secondary.large {
-    padding: var(--padding-em);
+.cp_cta_primary.large, .cp_cta_secondary.large, .cp_cta_tertiary.large {
     font-size: 18px;
 }
-:is(.cp_cta_primary.large, .cp_cta_secondary.large).laptop {
-    padding: var(--padding-em);
+:is(.cp_cta_primary.large, .cp_cta_secondary.large, .cp_cta_tertiary).laptop {
     font-size: 16px;
 }
-:is(.cp_cta_primary.large, .cp_cta_secondary.large).mobile {
-    padding: var(--padding-em);
+:is(.cp_cta_primary.large, .cp_cta_secondary.large, .cp_cta_tertiary).mobile {
     font-size: 14px;
 }
-:is(.cp_cta_primary.large, .cp_cta_secondary.large).email {
-    padding: var(--padding-em);
+:is(.cp_cta_primary.large, .cp_cta_secondary.large, .cp_cta_tertiary).email {
     font-size: 14px;
 }
-
-.cp_cta_tertiary {
-    padding: var(--padding-em-ter);
-    font-size: 16px;
-}
-.cp_cta_tertiary.laptop {
-    padding: var(--padding-em-ter);
-    font-size: 14px;
-}
-.cp_cta_tertiary.mobile {
-    padding: var(--padding-em-ter);
-    font-size: 12px;
-}
-.cp_cta_tertiary.email {
-    padding: var(--padding-em-ter);
-    font-size: 12px;
-}
-
-.cp_cta_tertiary.large {
-    padding: var(--padding-em-ter);
-    font-size: 18px;
-}
-.cp_cta_tertiary.large.laptop {
-    padding: var(--padding-em-ter);
-    font-size: 16px;
-}
-.cp_cta_tertiary.large.mobile {
-    padding: var(--padding-em-ter);
-    font-size: 14px;
-}
-.cp_cta_tertiary.large.email {
-    padding: var(--padding-em-ter);
-    font-size: 14px;
-}
-
 
 /*================= multiple btn spacing ===============*/
 
 .specs ~ a:nth-of-type(n + 2) {
     margin-top: 16px;
-}
-
-/*======================= min cha ===============================*/
-
-/*    without / with padding - border-box */
-/*  with font-size=16px, 10ch=96px, 1ch=9.6px=0.6em  */
-/*   with font-size=24px, 10ch=144px, 1ch=14.4px=0.6em */
-
-.minch {
-/*    min-width: 6em;*/
-/*    min-width: 10ch;*/
-    min-width: calc(var(--padding-left-right) + 10ch + var(--padding-left-right));
-    text-align: center;
-}
-.minch:is(.iconleft, .iconright) {
-/*    min-width: calc(var(--icon-size) + var(--icon-padding) + 10ch);*/
-    min-width: calc(var(--padding-left-right) + var(--icon-size) + var(--icon-padding) + 10ch + var(--padding-left-right));
-}
-.testme {
-    line-height: 1;
-    line-height: 1.5;
-}
-
-/*=================icon font / svg =========*/
-
-.iconleft.iconleft.iconleft {
-    position: relative;
-    padding-left: calc(var(--padding-left-right) + var(--icon-size) + var(--icon-padding));
-}
-
-.ic_font {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-/*    font-size: 24px;*/
-  font-size: var(--icon-size);
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-/*  display: inline-block;*/
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-    
-    display: block;
-    position: absolute;
-    left: var(--icon-position);
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.ic_svg {
-    display: block;
-    width: var(--icon-size);
-    height: var(--icon-size);
-    position: absolute;
-    left: var(--padding-left-right);
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.cp_cta_primary {
-    line-height: 1;
-/*    icon bleeds into padding */
-}
-
-.cp_cta_tertiary {
-    display: block;
-    width: fit-content;
-}
-
-.cp_cta_tertiary::after {
-    width: var(--icon-size);
-    height: var(--icon-size);
-    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;
-}
-.cp_cta_tertiary:is(:hover, :focus, :active)::after {
-    content: '';
-    background-image: url(../assets/ic_chevron_darkgreen_shape_thick.svg);
-}
-
-.cp_cta_tertiary.font::after {
-    content: none;
-}
-
-.ic_font.ter {
-    left: unset;
-    right: 0;
 }
