--- a/docs/css/02_base.css
+++ b/docs/css/02_base.css
@@ -1,4 +1,6 @@
 :root {
+    
+/*    ============= spacing =============*/
     --sp_em-xs: 0.3em;
     --sp_em-s: 0.6em;
     --sp_em-m: 0.9em;
@@ -26,8 +28,6 @@
     
     --sp_card-padding: 16px;
 
-
-
     --space-xs: 4px;
     --space-s: 8px;
     --space-m: 12px;
@@ -41,7 +41,13 @@
     --padding-lr: 10px;
     --padding-section: var(--padding-tb) var(--padding-lr);
     
-/*    --wrapper: 400px;*/
+    /*    ============= spacing =============*/
+    
+    --sz_icon-s: 16px;
+    --sz_icon-m: 24px;
+    --sz_icon-l: 32px;
+    
+    /*    ============= others =============*/
     
     --02transition: all 0.2s ease-in-out;
 
@@ -207,3 +213,8 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+/*    ============= sizing =============*/
+.sz_icon-s { width: var(--sz_icon-s); height: var(--sz_icon-s);}
+.sz_icon-m { width: var(--sz_icon-m); height: var(--sz_icon-m);}
+.sz_icon-l { width: var(--sz_icon-l); height: var(--sz_icon-l);}
