--- a/docs/css/02_base.css
+++ b/docs/css/02_base.css
@@ -7,6 +7,8 @@
     --sp_em-l: 1.2em;
     --sp_em-xl: 1.5em;
     --sp_em-xxl: 1.8em;
+    --sp_em-xxxl: 2.1em;
+    --sp_em-xxxxl: 2.4em;
     
     --sp_rem-xs: 0.25rem;
     --sp_rem-s: 0.5rem;
